crates/php-parser/tests/snapshots/corpus__expr_comparison.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(& result.program)
---
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Binary": {
              "left": {
                "kind": {
                  "Variable": "a"
                },
                "span": {
                  "start": 6,
                  "end": 8
                }
              },
              "op": "Less",
              "right": {
                "kind": {
                  "Variable": "b"
                },
                "span": {
                  "start": 11,
                  "end": 13
                }
              }
            }
          },
          "span": {
            "start": 6,
            "end": 13
          }
        }
      },
      "span": {
        "start": 6,
        "end": 15
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Binary": {
              "left": {
                "kind": {
                  "Variable": "a"
                },
                "span": {
                  "start": 15,
                  "end": 17
                }
              },
              "op": "LessOrEqual",
              "right": {
                "kind": {
                  "Variable": "b"
                },
                "span": {
                  "start": 21,
                  "end": 23
                }
              }
            }
          },
          "span": {
            "start": 15,
            "end": 23
          }
        }
      },
      "span": {
        "start": 15,
        "end": 25
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Binary": {
              "left": {
                "kind": {
                  "Variable": "a"
                },
                "span": {
                  "start": 25,
                  "end": 27
                }
              },
              "op": "Greater",
              "right": {
                "kind": {
                  "Variable": "b"
                },
                "span": {
                  "start": 30,
                  "end": 32
                }
              }
            }
          },
          "span": {
            "start": 25,
            "end": 32
          }
        }
      },
      "span": {
        "start": 25,
        "end": 34
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Binary": {
              "left": {
                "kind": {
                  "Variable": "a"
                },
                "span": {
                  "start": 34,
                  "end": 36
                }
              },
              "op": "GreaterOrEqual",
              "right": {
                "kind": {
                  "Variable": "b"
                },
                "span": {
                  "start": 40,
                  "end": 42
                }
              }
            }
          },
          "span": {
            "start": 34,
            "end": 42
          }
        }
      },
      "span": {
        "start": 34,
        "end": 44
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Binary": {
              "left": {
                "kind": {
                  "Variable": "a"
                },
                "span": {
                  "start": 44,
                  "end": 46
                }
              },
              "op": "Equal",
              "right": {
                "kind": {
                  "Variable": "b"
                },
                "span": {
                  "start": 50,
                  "end": 52
                }
              }
            }
          },
          "span": {
            "start": 44,
            "end": 52
          }
        }
      },
      "span": {
        "start": 44,
        "end": 54
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Binary": {
              "left": {
                "kind": {
                  "Variable": "a"
                },
                "span": {
                  "start": 54,
                  "end": 56
                }
              },
              "op": "Identical",
              "right": {
                "kind": {
                  "Variable": "b"
                },
                "span": {
                  "start": 61,
                  "end": 63
                }
              }
            }
          },
          "span": {
            "start": 54,
            "end": 63
          }
        }
      },
      "span": {
        "start": 54,
        "end": 65
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Binary": {
              "left": {
                "kind": {
                  "Variable": "a"
                },
                "span": {
                  "start": 65,
                  "end": 67
                }
              },
              "op": "NotEqual",
              "right": {
                "kind": {
                  "Variable": "b"
                },
                "span": {
                  "start": 71,
                  "end": 73
                }
              }
            }
          },
          "span": {
            "start": 65,
            "end": 73
          }
        }
      },
      "span": {
        "start": 65,
        "end": 75
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Binary": {
              "left": {
                "kind": {
                  "Variable": "a"
                },
                "span": {
                  "start": 75,
                  "end": 77
                }
              },
              "op": "NotIdentical",
              "right": {
                "kind": {
                  "Variable": "b"
                },
                "span": {
                  "start": 82,
                  "end": 84
                }
              }
            }
          },
          "span": {
            "start": 75,
            "end": 84
          }
        }
      },
      "span": {
        "start": 75,
        "end": 86
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Binary": {
              "left": {
                "kind": {
                  "Variable": "a"
                },
                "span": {
                  "start": 86,
                  "end": 88
                }
              },
              "op": "Spaceship",
              "right": {
                "kind": {
                  "Variable": "b"
                },
                "span": {
                  "start": 93,
                  "end": 95
                }
              }
            }
          },
          "span": {
            "start": 86,
            "end": 95
          }
        }
      },
      "span": {
        "start": 86,
        "end": 97
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Binary": {
              "left": {
                "kind": {
                  "Variable": "a"
                },
                "span": {
                  "start": 97,
                  "end": 99
                }
              },
              "op": "Instanceof",
              "right": {
                "kind": {
                  "Identifier": "B"
                },
                "span": {
                  "start": 111,
                  "end": 112
                }
              }
            }
          },
          "span": {
            "start": 97,
            "end": 112
          }
        }
      },
      "span": {
        "start": 97,
        "end": 114
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Binary": {
              "left": {
                "kind": {
                  "Variable": "a"
                },
                "span": {
                  "start": 114,
                  "end": 116
                }
              },
              "op": "Instanceof",
              "right": {
                "kind": {
                  "Variable": "b"
                },
                "span": {
                  "start": 128,
                  "end": 130
                }
              }
            }
          },
          "span": {
            "start": 114,
            "end": 130
          }
        }
      },
      "span": {
        "start": 114,
        "end": 131
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 131
  }
}
