crates/php-parser/tests/snapshots/corpus__expr_exit.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(& result.program)
---
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Exit": null
          },
          "span": {
            "start": 6,
            "end": 10
          }
        }
      },
      "span": {
        "start": 6,
        "end": 12
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Exit": null
          },
          "span": {
            "start": 12,
            "end": 18
          }
        }
      },
      "span": {
        "start": 12,
        "end": 20
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Exit": {
              "kind": {
                "String": "Die!"
              },
              "span": {
                "start": 25,
                "end": 31
              }
            }
          },
          "span": {
            "start": 20,
            "end": 32
          }
        }
      },
      "span": {
        "start": 20,
        "end": 34
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Exit": null
          },
          "span": {
            "start": 34,
            "end": 37
          }
        }
      },
      "span": {
        "start": 34,
        "end": 39
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Exit": null
          },
          "span": {
            "start": 39,
            "end": 44
          }
        }
      },
      "span": {
        "start": 39,
        "end": 46
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Exit": {
              "kind": {
                "String": "Exit!"
              },
              "span": {
                "start": 50,
                "end": 57
              }
            }
          },
          "span": {
            "start": 46,
            "end": 58
          }
        }
      },
      "span": {
        "start": 46,
        "end": 61
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "FunctionCall": {
              "name": {
                "kind": {
                  "Identifier": "exit"
                },
                "span": {
                  "start": 61,
                  "end": 65
                }
              },
              "args": [
                {
                  "name": "status",
                  "value": {
                    "kind": {
                      "Int": 42
                    },
                    "span": {
                      "start": 74,
                      "end": 76
                    }
                  },
                  "unpack": false,
                  "by_ref": false,
                  "span": {
                    "start": 66,
                    "end": 76
                  }
                }
              ]
            }
          },
          "span": {
            "start": 61,
            "end": 77
          }
        }
      },
      "span": {
        "start": 61,
        "end": 79
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "FunctionCall": {
              "name": {
                "kind": {
                  "Identifier": "exit"
                },
                "span": {
                  "start": 79,
                  "end": 83
                }
              },
              "args": [
                {
                  "name": null,
                  "value": {
                    "kind": {
                      "Variable": "args"
                    },
                    "span": {
                      "start": 87,
                      "end": 92
                    }
                  },
                  "unpack": true,
                  "by_ref": false,
                  "span": {
                    "start": 84,
                    "end": 92
                  }
                }
              ]
            }
          },
          "span": {
            "start": 79,
            "end": 93
          }
        }
      },
      "span": {
        "start": 79,
        "end": 95
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "FunctionCall": {
              "name": {
                "kind": {
                  "Identifier": "exit"
                },
                "span": {
                  "start": 95,
                  "end": 99
                }
              },
              "args": [
                {
                  "name": null,
                  "value": {
                    "kind": {
                      "Variable": "a"
                    },
                    "span": {
                      "start": 100,
                      "end": 102
                    }
                  },
                  "unpack": false,
                  "by_ref": false,
                  "span": {
                    "start": 100,
                    "end": 102
                  }
                },
                {
                  "name": null,
                  "value": {
                    "kind": {
                      "Variable": "b"
                    },
                    "span": {
                      "start": 104,
                      "end": 106
                    }
                  },
                  "unpack": false,
                  "by_ref": false,
                  "span": {
                    "start": 104,
                    "end": 106
                  }
                }
              ]
            }
          },
          "span": {
            "start": 95,
            "end": 107
          }
        }
      },
      "span": {
        "start": 95,
        "end": 109
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "FunctionCall": {
              "name": {
                "kind": {
                  "Identifier": "\\exit"
                },
                "span": {
                  "start": 109,
                  "end": 114
                }
              },
              "args": [
                {
                  "name": null,
                  "value": {
                    "kind": {
                      "Variable": "a"
                    },
                    "span": {
                      "start": 115,
                      "end": 117
                    }
                  },
                  "unpack": false,
                  "by_ref": false,
                  "span": {
                    "start": 115,
                    "end": 117
                  }
                }
              ]
            }
          },
          "span": {
            "start": 109,
            "end": 118
          }
        }
      },
      "span": {
        "start": 109,
        "end": 120
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "CallableCreate": {
              "kind": {
                "Function": {
                  "kind": {
                    "Identifier": "exit"
                  },
                  "span": {
                    "start": 120,
                    "end": 124
                  }
                }
              }
            }
          },
          "span": {
            "start": 120,
            "end": 129
          }
        }
      },
      "span": {
        "start": 120,
        "end": 131
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "FunctionCall": {
              "name": {
                "kind": {
                  "Identifier": "DIE"
                },
                "span": {
                  "start": 131,
                  "end": 134
                }
              },
              "args": [
                {
                  "name": null,
                  "value": {
                    "kind": {
                      "Variable": "a"
                    },
                    "span": {
                      "start": 135,
                      "end": 137
                    }
                  },
                  "unpack": false,
                  "by_ref": false,
                  "span": {
                    "start": 135,
                    "end": 137
                  }
                },
                {
                  "name": null,
                  "value": {
                    "kind": {
                      "Variable": "b"
                    },
                    "span": {
                      "start": 139,
                      "end": 141
                    }
                  },
                  "unpack": false,
                  "by_ref": false,
                  "span": {
                    "start": 139,
                    "end": 141
                  }
                }
              ]
            }
          },
          "span": {
            "start": 131,
            "end": 142
          }
        }
      },
      "span": {
        "start": 131,
        "end": 143
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 143
  }
}
